--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">build-it-bigger</string>
     <string name="action_settings">Settings</string>
+    <string name="root_url_api">http://10.0.2.2:8085/_ah/api/</string>
 </resources>
